added lab 5 and added a footer containing phone number, email, and last updated date to all pages

--- a/lab4.html
+++ b/lab4.html
@@ -16,6 +16,7 @@
         <li><a href="lab2.html">Lab 2</a></li>
         <li><a href="lab3.html">Lab 3</a></li>
         <li><a href="lab4.html">Lab 4</a></li>
+        <li><a href="lab5.html">Lab 5</a></li>
       </ul>
     </nav>
     <main class = "box content">
@@ -43,7 +44,10 @@
       </i></p>
     </main>
     <footer>
-      <p> Phone: 706-366-3984 <br> Email: hupage@columbusstate.edu <br> Last Updated:  </p>
+      <p> Phone: 706-366-3984 </p>
+      <p> Email: page_hugh@columbusstate.edu </p>
+      <p> Last Updated:</p>
+      <p id="modified"></p>
     </footer>
     </div>
     <script src="script.js"></script>
